<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginTop"
    android:background="@drawable/dialog_shape"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginTop"
        android:text="@string/TitleOutOfTime"
        android:textColor="@color/primary"
        android:textSize="@dimen/dialog_text_size_correct"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTop"
        android:gravity="center">
        <ImageView
            android:id="@+id/share1"
            android:layout_width="47px"
            android:layout_height="47px"
            android:layout_marginRight="10dp"
            android:src="@drawable/facebook2"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/share2"
            android:layout_width="47px"
            android:layout_height="47px"
            android:src="@drawable/twitter2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textColor="@color/primary"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dialog_oot"
            android:text="@string/next"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="Your Coin"
        android:textColor="@color/primary"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1230"
        android:textColor="@color/primary"/>


    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/rangking"
        android:textColor="@color/primary"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_coins"
        android:textColor="@color/primary"/>



</LinearLayout>