<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/share1"
            android:layout_width="47px"
            android:layout_height="47px"
            android:layout_marginRight="@dimen/marginTop"
            android:src="@drawable/facebook2" />

        <ImageView
            android:id="@+id/share2"
            android:layout_width="47px"
            android:layout_height="47px"
            android:src="@drawable/twitter2" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/coin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/coins2"
        android:layout_centerInParent="true"
        android:text="Coins"
        android:textColor="@color/primary"

        android:textSize="@dimen/textSizeMainMenu"
        android:textStyle="bold"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/coins2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout1"
        android:layout_centerInParent="true"
        android:text="1230"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/marginTop">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mainMenuMargin"
            android:onClick="MainMenuClick"
            android:text="@string/menu1"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mainMenuMargin"
            android:onClick="MainMenuClick"
            android:text="@string/menu2"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/menu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mainMenuMargin"
            android:onClick="MainMenuClick"
            android:text="@string/menu3"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/menu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mainMenuMargin"
            android:onClick="MainMenuClick"
            android:text="@string/menu4"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/menu5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="MainMenuClick"
            android:text="@string/menu5"/>

    </LinearLayout>


</RelativeLayout>